Security hardening: 21 security controls, all CRITICAL/HIGH resolved
- JWT auth (HS256, 15-min expiry) with blacklist and refresh token rotation
- HMAC-SHA256 request body integrity verification on all POST
- Login rate limiting (5 attempts/15 min)
- AES/CBC/PKCS5 message encryption between frontend and Tuxedo
- Request body size limit (1MB) and payload validation
- Secrets externalized to environment variables
- Generic error responses (no internal details to client)
- Audit logging filter on every request
- Telegram library logging sanitized (VO data at DEBUG only)
- File upload: extension whitelist + path traversal protection
- Security headers: HSTS, X-Frame-Options DENY, XSS, Content-Type
- Dead code removed (ExampleController, ExampleService)

Security score: 78/100 | Open findings: 1 (accepted - X-Forwarded-For)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>