@@ -1,7 +1,8 @@
 package maas.bcap.security;
 
-import java.util.List;
+import java.util.Arrays;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -15,11 +16,18 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 @Configuration
 public class SecurityConfig {
 
+    private final HmacVerificationFilter hmacVerificationFilter;
     private final JwtAuthFilter jwtAuthFilter;
+    private final AuditLogFilter auditLogFilter;
     private final CustomAuthEntryPoint customAuthEntryPoint;
 
-    public SecurityConfig(JwtAuthFilter jwtAuthFilter, CustomAuthEntryPoint customAuthEntryPoint) {
+    @Value("${cors.allowed.origins}")
+    private String allowedOrigins;
+
+    public SecurityConfig(HmacVerificationFilter hmacVerificationFilter, JwtAuthFilter jwtAuthFilter, AuditLogFilter auditLogFilter, CustomAuthEntryPoint customAuthEntryPoint) {
+        this.hmacVerificationFilter = hmacVerificationFilter;
         this.jwtAuthFilter = jwtAuthFilter;
+        this.auditLogFilter = auditLogFilter;
         this.customAuthEntryPoint = customAuthEntryPoint;
     }
 
@@ -29,25 +37,34 @@ public class SecurityConfig {
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                // .exceptionHandling(eh -> eh
-                // .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED)))
+                .headers(headers -> headers
+                        .contentTypeOptions(contentType -> {})
+                        .frameOptions(frame -> frame.deny())
+                        .xssProtection(xss -> {})
+                        .httpStrictTransportSecurity(hsts -> hsts
+                                .includeSubDomains(true)
+                                .maxAgeInSeconds(31536000))
+                )
                 .exceptionHandling(eh -> eh.authenticationEntryPoint(customAuthEntryPoint))
                 .authorizeHttpRequests(auth -> auth
-                        .antMatchers("/message", "/auth/me/**", "/file-manager/**").authenticated()
-                        .antMatchers("/**").permitAll() // covers OPTIONS automatically
+                        .antMatchers("/auth/login", "/auth/refresh").permitAll()
+                        .antMatchers("/actuator/health").permitAll()
+                        .antMatchers("/").permitAll()
+                        .anyRequest().authenticated()
                 )
-                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(hmacVerificationFilter, UsernamePasswordAuthenticationFilter.class)
+                .addFilterAfter(jwtAuthFilter, HmacVerificationFilter.class)
+                .addFilterAfter(auditLogFilter, JwtAuthFilter.class)
                 .build();
     }
 
-    // Basic permissive CORS example – tighten for production
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(List.of("*")); // <- set your origins
-        cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        cfg.setAllowedHeaders(List.of("*"));
-        cfg.setExposedHeaders(List.of("Authorization"));
+        cfg.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        cfg.setAllowedHeaders(Arrays.asList("*"));
+        cfg.setExposedHeaders(Arrays.asList("Authorization"));
         cfg.setAllowCredentials(false);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
